add sending user status to db
