# backend/docs/swagger.json
@@ -11,14 +11,14 @@
     "paths": {
         "/player/join": {
             "post": {
-                "description": "user joins game",
+                "description": "player joins game",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "player"
                 ],
-                "summary": "user joins game",
+                "summary": "player joins game",
                 "parameters": [
                     {
                         "description": "user name, desired capacity",
@@ -27,6 +27,30 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/types.PostPlayerJoinHandlerRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/player/status": {
+            "post": {
+                "description": "sends status info",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "player"
+                ],
+                "summary": "sends status info",
+                "parameters": [
+                    {
+                        "description": "user id",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.PostPlayerStatusHandlerRequest"
                         }
                     }
                 ],
@@ -42,6 +66,14 @@
                     "type": "integer"
                 },
                 "nickname": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.PostPlayerStatusHandlerRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "string"
                 }
             }
